--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Minha Série</title>
+  <title>Minha Série </title>
+  <header style="padding: 0; margin: 0;">
+    <img src="https://media.istockphoto.com/id/1175380889/pt/foto/woman-in-exercise-gear-standing-in-a-row-holding-dumbbells-during-an-exercise-class-at-the-gym.jpg?s=612x612&w=0&k=20&c=rFKw6Go0L_tJQzOVCD-fkMY6TDtoNDbV5yR4ptlFACw=" alt="Imagem do cabeçalho" style="width: 100%; height: auto; display: block;">
+  </header>  
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/256/755/755298.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <style>
     body {
@@ -173,7 +177,7 @@
   </style>
 </head>
 <body>
-  <header>Minha Série</header>
+  <header>Minha Série #TEAMTATA</header>
   <div class="tabs">
     <button class="active" onclick="showTab('a')">Treino A</button>
     <button onclick="showTab('b')">Treino B</button>
@@ -602,5 +606,9 @@
       }
     }
   </script>
+
+<footer style="text-align: center; padding: 20px; background-color: #222; color: white;">
+  <p style="margin-top: 10px;">Série Feito com ❤️ por @tataa.personal</p>
+</footer>
 </body>
 </html>
