--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header style="padding: 0; margin: 0;">
     <img src="https://media.istockphoto.com/id/1175380889/pt/foto/woman-in-exercise-gear-standing-in-a-row-holding-dumbbells-during-an-exercise-class-at-the-gym.jpg?s=612x612&w=0&k=20&c=rFKw6Go0L_tJQzOVCD-fkMY6TDtoNDbV5yR4ptlFACw=" alt="Imagem do cabeçalho" style="width: 100%; height: auto; display: block;">
   </header>  
-  
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <style>
     body {
@@ -611,5 +611,19 @@
 <footer style="text-align: center; padding: 20px; background-color: #222; color: white;">
   <p style="margin-top: 10px;">Série Feito com ❤️ por @tataa.personal</p>
 </footer>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js')
+        .then((registration) => {
+          console.log('Service Worker registrado com sucesso:', registration);
+        })
+        .catch((error) => {
+          console.log('Falha ao registrar o Service Worker:', error);
+        });
+    });
+  }
+</script>
 </body>
 </html>
